--- a/snippets-ml/requirements.txt
+++ b/snippets-ml/requirements.txt
@@ -1,12 +1,34 @@
+# python==3.9.16
 scikit-learn==1.0.2
-numpy==1.21.6
-pandas==1.3.5
-torch==1.13.1
+statsmodels==0.14.4
+numpy==2.0.2
+pandas==2.2.3
+torch==2.5.1
 jupyter==1.0.0
 matplotlib==3.5.3
 pyarrow==11.0.0
 fastparquet==0.8.1
-torchvision==0.14.1
 gensim==4.2.0
 mlxtend==0.21.0
-tensorflow_cpu==2.5.0
+# tensorflow_cpu
+spacy==3.1.0
+spacy_alignments==0.8.4
+hanlp==2.1.0b0
+lightgbm==3.2.1
+xgboost==1.5.2
+sentence_transformers==1.0.4
+spacy==3.1.0
+spacy_alignments==0.8.4
+keras==2.4.3
+nltk==3.3
+dill==0.3.4
+opencv-python==4.6.0.66
+Pillow==9.3.0
+# paddleocr
+openpyxl
+# torchvision
+# transformers
+# vllm
+# gradio
+streamlit
+scipy
